--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cz.cvut.kbss</groupId>
-    <artifactId>BookStore</artifactId>
+    <groupId>cz.cvut.wpa</groupId>
+    <artifactId>Badminton-tournament</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>BookStore-JPA-Spring-jUnit-JSF-Security</name>
+    <name>Badminton-tournament</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
