--- a/src/main/webapp/WEB-INF/properties/jdbc.properties
+++ b/src/main/webapp/WEB-INF/properties/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/bookstore
+jdbc.url=jdbc:postgresql://localhost:5432/badminton
 jdbc.username=postgres
 jdbc.password=1234
